community images js and template

--- a/object.html
+++ b/object.html
@@ -23,7 +23,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.7.0/d3.min.js" integrity="sha512-cd6CHE+XWDQ33ElJqsi0MdNte3S+bQY819f7p3NUHgwQQLXSKjE4cPZTeGNI+vaxZynk1wVU3hoHmow3m089wA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/pinboard.css" rel="stylesheet" />
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-md-8 col-xs-12">
                         <div class="community-pinboard">
-                            <!-- <template>
+                            <template>
                                 <div class="image-tile">
                                     <figure>
                                         <img src="/assets/community-pinboard/" alt="Community Submitted Image">
@@ -86,25 +86,6 @@
                                     </figure>
                                 </div>
                             </template>
-
-                            <div class="image-tile">
-                                <figure>
-                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
-                                    <figcaption>By XXX</figcaption>
-                                </figure>
-                            </div>
-                            <div class="image-tile">
-                                <figure>
-                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
-                                    <figcaption>By YYY</figcaption>
-                                </figure>
-                            </div>
-                            <div class="image-tile">
-                                <figure>
-                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
-                                    <figcaption>By ZZZ</figcaption>
-                                </figure>
-                            </div> -->
                             
                             <div class="image-tile hidden fallback-text">
                                 <h4 class="submission-cta">This object has no community submissions. <br/><br/><a href="#" target="_blank">Share your image here</a></p></h4>
