Gwendolyn Brooks Quotes, thank-yous, and bibliography update

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <p class="mb-4"><p><i>A Material Collapse That is Construction</i> is a 30-minute audio experience situated around Crown Hall at IIT 
                             in Bronzeville, Chicago. The project strives to explore the complicated and layered history of the site through the building 
                             that preceded the campus—The Mecca Apartments. Affectionately known as “The Mecca Flats” or simply “The Mecca,” the building 
-                            was a hub of black culture and life in Bronzeville for nearly half a century. When the Mecca was demolished in 1951 to clear 
+                            was a hub of Black culture and life in Bronzeville for nearly half a century. When the Mecca was demolished in 1951 to clear 
                             the way for IIT’s campus expansion, it signaled the loss of a historic community. Through poetry, soundscapes, music, and critical 
                             analysis, <i>A Material Collapse That is Construction</i> proposes deeper reflection on the legacy of this site, and its implications 
                             for socio-spatial politics in the city.</p>
