--- a/biblio.html
+++ b/biblio.html
@@ -52,8 +52,9 @@
                         <h2 class="mt-0">First, A Thank-You</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                            I would like to extend my gratitude to <a href="http://www.terirueb.net/" target="_blank">Teri Rueb</a> for our conversation on her work that inspired the form of this project. 
-                            <p>I would also like to thank D.N. Rodowick and Solveig Nelson for sharing resources from <a href="https://graycenter.uchicago.edu/fellowships/overlay" target="_blank">Overlay</a> (2015). </p>
+                            <p>I would like to extend my gratitude to Dr. Rebecca Graff at Lake Forest College for her expertise on the Mecca and her generosity with her resources and time. </p>
+                            <p>I would also like to express thanks to <a href="http://www.terirueb.net/" target="_blank">Teri Rueb</a> for our conversation on her work that inspired the form of this project.</p> 
+                            <p>Further thanks to D.N. Rodowick and Solveig Nelson for sharing resources from <a href="https://graycenter.uchicago.edu/fellowships/overlay" target="_blank">Overlay</a> (2015). </p>
                             <p>Last but certainly not least, many thank-you's to Shelby Lynn Bias for her performances of excerpts from Gwendolyn Brooks's <i>In the Mecca</i>. You can find Shelby on Instagram at <a href="https://www.instagram.com/lilshelbylynn/?hl=en" target="_blank">@lilshelbylynn</a>. </p>
                         </p>   
                     </div>
@@ -72,6 +73,7 @@
                                 <p>Attoh, Kafui. “What Kind of Right Is the Right to the City?” <i>Progress in Human Geography</i> 35, no. 5 (February 14, 2011): 669–685.</p>
                                 <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919.</i> Chicago: University of Chicago Press, 2004.</p>
                                 <p>Bartholomew Ortega, Kirsten. “The Black Flaneuse: Gwendolyn Brooks’s “In the Mecca.” <i>Journal of Modern Literature</i> 30, no.4 (Summer 2007): 139-155. </p>
+                                <p>Beaudry, Mary C. "Households beyond the House: On the Archaeology and Materiality of Historical Households." In <i>Beyond the Walls: New Perspectives on the Archaeology of Historical Households,</i> by Kevin R. Fogle, James A. Nyman, and Mary Carolyn Beaudry (Gainesville: University Press of Florida, 2015), 1-22.</p>
                                 <p>Bluestone, Daniel. “Chicago’s Mecca Flat Blues.” <i>Journal of the Society of Architectural Historians</i> 57, no. 4 (December 1998): 382-403.</p>
                                 <p>BrookdaleTV. “Visiting Writers Series Interview with Garnette Cadogan.” Uploaded April 24, 2017. YouTube video, 26:13. https://www.youtube.com/watch?v=S8LnxpSt5PQ.</p>
                                 <p>Brooks, Gwendolyn. <i>In the Mecca.</i> New York: Harper & Row, 1968.</p>
