audio upload, commenting out audio, and thank-you page update

--- a/biblio.html
+++ b/biblio.html
@@ -52,7 +52,7 @@
                         <h2 class="mt-0">First, A Thank-You</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                            <p>I would like to extend my gratitude to Dr. Rebecca Graff at Lake Forest College for her expertise on the Mecca and her generosity with her resources and time. </p>
+                            <p>I would like to extend my gratitude to <a href="https://twitter.com/RebeccaSGraff" target="_blank">Dr. Rebecca Graff</a> at <a href="https://www.lakeforest.edu/academics/faculty/graff/" target="_blank">Lake Forest College</a>for her expertise on the Mecca and her generosity with her resources and time. </p>
                             <p>I would also like to express thanks to <a href="http://www.terirueb.net/" target="_blank">Teri Rueb</a> for our conversation on her work that inspired the form of this project.</p> 
                             <p>Further thanks to D.N. Rodowick and Solveig Nelson for sharing resources from <a href="https://graycenter.uchicago.edu/fellowships/overlay" target="_blank">Overlay</a> (2015). </p>
                             <p>Last but certainly not least, many thank-you's to Shelby Lynn Bias for her performances of excerpts from Gwendolyn Brooks's <i>In the Mecca</i>. You can find Shelby on Instagram at <a href="https://www.instagram.com/lilshelbylynn/?hl=en" target="_blank">@lilshelbylynn</a>. </p>
