community pinboard link

--- a/object.html
+++ b/object.html
@@ -74,7 +74,7 @@
                             <img src="/assets/img/Aspirin_pills_MeccaFlats.jpg" alt="Asprin Pills">
                             <figcaption> Photograph by Rebecca Graff, Mecca Flats Archaeological Salvage Project (2018), Lake Forest College/Digital Chicago. </figcaption>
                         </figure> 
-                        <p class="submission-cta">Have something like this?<br/> <a href="#" target="_blank">Submit your image here.</a></p>
+                        <p class="submission-cta">Have something like this?<br/> <a href="https://docs.google.com/forms/d/e/1FAIpQLScdDmug7kK90vvT1OjyDUA3tzUuaAm8iX3tYmob9-SQd9lLoA/viewform?usp=sf_link" target="_blank">Submit your image here.</a></p>
                     </div>
                     <div class="col-md-8 col-xs-12">
                         <div class="community-pinboard">
@@ -88,7 +88,7 @@
                             </template>
                             
                             <div class="image-tile hidden fallback-text">
-                                <h4 class="submission-cta">This object has no community submissions. <br/><br/><a href="#" target="_blank">Share your image here</a></p></h4>
+                                <h4 class="submission-cta">This object has no community submissions. <br/><br/><a href="https://docs.google.com/forms/d/e/1FAIpQLScdDmug7kK90vvT1OjyDUA3tzUuaAm8iX3tYmob9-SQd9lLoA/viewform?usp=sf_link" target="_blank">Share your image here</a></p></h4>
                             </div>
                         </div>
                     </div>
