--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
          <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRTG59QNZP"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0QX0R4BG7"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-ZRTG59QNZP');
+            gtag('config', 'G-E0QX0R4BG7');
         </script>
 <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
