--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     <div class="col-lg-8">
                         <h2 class="mt-0">Black Arts Archive Sawyer Seminar</h2>
                         <hr class="divider light my-4" />
-                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> was created for a class taught by Dr. Aymar Jean Christian and Dr. Rebecca Zorach at Northwestern University in 2020 for the Black Arts Consortium's Mellon-Sawyer Seminar entitled “The Black Arts Archive: The Challenge of Translation.” 
+                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> was created by Kat Caribeaux for a class taught by Dr. Aymar Jean Christian and Dr. Rebecca Zorach at Northwestern University in 2020 for the Black Arts Consortium's Mellon-Sawyer Seminar entitled “The Black Arts Archive: The Challenge of Translation.” 
                             <!-- <a href="http://www.terirueb.net/" target="_blank">More information on the Seminar can be found here.</a> </p> -->
                     </div>
                 </div>
